[metadata]
name = my-python-library
version = attr: my_python_library.__version__.__version__
description = A brief description of your library
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/my-python-library
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    # List your library's dependencies here
    # e.g. requests>=2.25.1

[options.packages.find]
where = src