[metadata]
name = incremental-join
version = attr: incremental_join.__version__.__version__
description = This python library helps you to join 2 huge incrementally refreshed tables. Major benefits: performance, efficiency and consistency.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bas van den Berg
author_email = b.vdberg@c2h.nl
url = https://github.com/basvdberg/IncrementalJoin
license = LGPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src