[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-utils"
version = "0.1.0"
description = "Utility functions for time and date operations"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Bas van den Berg", email = "b.vdberg@c2h.nl" }]
license = { text = "LGPL-3.0-or-later" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

